# code-golf-bagnon-sort

./: .flake8  .pre-commit-config.yaml  .pylintrc  README.md  question.stack  question.stack.md  setup.cfg
code_golf_bagnon_sort/: bag.py  basic_sorter.py  checker.py  item.py
tests/: conftest.py  test_bag.py  test_integration.py
wow_bagnon/: bag.py  basic_sorter.py  item.py
