[metadata]
name = code-golf-bagnon-sort
description =
long_description = file: question.stack.md
long_description_content_type = text/markdown
url = https://github.com/Pierre-Sassoulas/code-golf-bagnon-sort
author = Pierre Sassoulas
author_email = pierre.sassoulas@gmail.com
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only


[options]
packages = find:
install_requires =
python_requires = >=3.7
setup_requires =
    setuptools_scm
    wheel
tests_require =
    pytest>=6.0,<7.0
    pytest-cov

[options.extras_require]
dev =
    pre-commit
    pylint==2.14.5
    pytest-cov
